<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sam.project.CreateAlbum">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/album_name"
        android:id="@+id/album_name_create"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/album_private"
        android:text="@string/private_album"
        android:checked="false"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:text="@string/first_photo"
        android:paddingTop="20sp"
        />

    <com.parse.ParseImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@android:drawable/gallery_thumb"
        android:id="@+id/first_image"
        android:layout_gravity="center_horizontal"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/save_album"
        android:paddingTop="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/save"/>
</LinearLayout>
