<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sam.project.Album">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/privatelabel"
        android:textSize="24sp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:id="@+id/invite_users"
            android:text="@string/invite"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="wrap_content"
            android:id="@+id/add_image"
            android:text="@string/add_image"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/invited_users"
            android:text="@string/invited_users"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/delete_album"
        android:text="@string/delete_album"
        android:layout_gravity="center_horizontal"
        android:visibility="invisible"/>

    <GridView
        android:layout_width="match_parent"
        android:id="@+id/gridview_album"
        android:columnWidth="90dp"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp"
        android:gravity="center"
        android:layout_height="match_parent">

    </GridView>

</LinearLayout>
